<?xml version="1.0"?>
<package format="2">
  <name>ar_minor_assignment1</name>
  <version>0.0.1</version>
  <description>Core package for adaptive robotics minor - Assignment 1</description>

  <maintainer email="todo@todo.com">Robohub</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
